--- a/Main/src/HomePage.fxml
+++ b/Main/src/HomePage.fxml
@@ -2,40 +2,36 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.scene.text.*?>
 
- <BorderPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
-             fx:controller="HomePageController"
-             prefHeight="400.0" prefWidth="600.0">
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="HomePageController">
 
      <!-- Top Section -->
      <top>
-         <HBox spacing="10" prefHeight="50" style="-fx-background-color: #CCCCCC;" alignment="CENTER">
-             <Label text="Home Page" style="-fx-font-size: 18px;"/>
+         <HBox alignment="CENTER" prefHeight="50" spacing="10" style="-fx-background-color: #CCCCCC;">
+             <Label style="-fx-font-size: 18px;" text="SSH Console Homepage" />
          </HBox>
      </top>
 
      <!-- Center Section -->
      <center>
-<VBox spacing="20" alignment="CENTER">
-             <Label text="Text 1" style="-fx-background-color: #AAAAAA; -fx-font-size: 16px; -fx-padding: 10px;"/>
-             <Label text="Text 2" style="-fx-background-color: #AAAAAA; -fx-font-size: 16px; -fx-padding: 10px;"/>
+<VBox alignment="CENTER" spacing="20" style="-fx-background-color: #aed6f1;">
+             <Label alignment="TOP_CENTER" prefHeight="47.0" prefWidth="199.0" style="-fx-background-color: #aeb6bf\; -fx-background-image: ; -fx-font-size: 16px; -fx-padding: 10px;" text="Welcome students">
+            <font>
+               <Font size="18.0" />
+            </font></Label>
+             <Label style="-fx-background-color: #AAAAAA; -fx-font-size: 16px; -fx-padding: 10px;" text="Text 2" />
          </VBox>
      </center>
 
      <!-- Right Section -->
      <right>
-         <VBox spacing="10" prefWidth="100" style="-fx-background-color: #DDDDDD;" alignment="CENTER">
-             <Label text="Option 1" style="-fx-background-color: #BBBBBB; -fx-padding: 10px;"/>
-             <Label text="Option 2" style="-fx-background-color: #BBBBBB; -fx-padding: 10px;"/>
-             <Label text="Option 3" style="-fx-background-color: #BBBBBB; -fx-padding: 10px;"/>
-             <Button text="Shop" onAction="#goToCart" style="-fx-background-color: #BBBBBB;"/>
+         <VBox alignment="CENTER" prefWidth="100" spacing="10" style="-fx-background-color: #DDDDDD;">
+             <Button onAction="#goToCart" prefHeight="39.0" prefWidth="66.0" style="-fx-background-color: #a9dfbf;" text="Shop" />
+             <Label style="-fx-background-color: #BBBBBB; -fx-padding: 10px;" text="SSH Camera" />
+             <Label style="-fx-background-color: #BBBBBB; -fx-padding: 10px;" text="Student Info" />
+             <Label style="-fx-background-color: #BBBBBB; -fx-padding: 10px;" text="Help" />
          </VBox>
      </right>
 
  </BorderPane>
-
-
-
