--- a/Main/src/Store.fxml
+++ b/Main/src/Store.fxml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="StoreController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #85929e;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="StoreController">
+   <children>
+      <VBox layoutX="27.0" layoutY="29.0" prefHeight="326.0" prefWidth="549.0" style="-fx-background-color: #34495e;" />
+      <HBox layoutX="45.0" layoutY="49.0" prefHeight="75.0" prefWidth="515.0" style="-fx-background-color: #bfc9ca; -fx-alignment: #17202a;">
+         <children>
+            <ImageView fitHeight="74.0" fitWidth="101.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@Images/Apple.jpg" />
+               </image></ImageView>
+         </children></HBox>
+      <Button alignment="BOTTOM_RIGHT" centerShape="false" layoutX="481.0" layoutY="74.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="68.0" text="Add Item" />
+      <Button layoutX="27.0" layoutY="361.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="68.0" style="-fx-background-color: #5d6d7e;" text="Back" />
+      <Button layoutX="508.0" layoutY="361.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="68.0" style="-fx-background-color: #5d6d7e;" text="Checkout" />
+      <HBox layoutX="44.0" layoutY="155.0" prefHeight="75.0" prefWidth="515.0" style="-fx-background-color: #bfc9ca; -fx-alignment: #17202a;" />
+      <HBox layoutX="43.0" layoutY="263.0" prefHeight="75.0" prefWidth="515.0" style="-fx-background-color: #bfc9ca; -fx-alignment: #17202a;" />
+      <Button alignment="BOTTOM_RIGHT" centerShape="false" layoutX="483.0" layoutY="180.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="68.0" text="Add Item" />
+      <Button alignment="BOTTOM_RIGHT" centerShape="false" layoutX="482.0" layoutY="285.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="68.0" text="Add Item" />
+   </children>
 </AnchorPane>
