--- a/Main/src/Checkout.fxml
+++ b/Main/src/Checkout.fxml
@@ -4,14 +4,15 @@
 <?import javafx.scene.layout.*?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #5d6d7e;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="CheckoutController">
-   <children>
-      <TableView layoutX="26.0" layoutY="18.0" prefHeight="366.0" prefWidth="549.0" snapToPixel="false">
-        <columns>
-          <TableColumn prefWidth="109.0" text="Student Name" />
-          <TableColumn prefWidth="132.0" text="Student ID" />
-            <TableColumn prefWidth="202.0" text="Items" />
-            <TableColumn minWidth="0.0" prefWidth="105.0" text="Total" />
-        </columns>
-      </TableView>
-   </children>
+    <children>
+        <TableView fx:id="tableView" layoutX="26.0" layoutY="18.0" prefHeight="366.0" prefWidth="549.0" snapToPixel="false">
+            <columns>
+                <TableColumn fx:id="studentNameColumn" prefWidth="109.0" text="Student Name" />
+                <TableColumn fx:id="studentIdColumn" prefWidth="132.0" text="Student ID" />
+                <TableColumn fx:id="itemsColumn" prefWidth="202.0" text="Items" />
+                <TableColumn fx:id="totalColumn" minWidth="0.0" prefWidth="105.0" text="Total" />
+            </columns>
+        </TableView>
+    </children>
 </AnchorPane>
+
