--- a/Main/src/main/resources/HomePage.fxml
+++ b/Main/src/main/resources/HomePage.fxml
@@ -20,7 +20,10 @@
             <font>
                <Font size="26.0" />
             </font></Label>
-             <Button onAction="#goToCart" prefHeight="39.0" prefWidth="84.0" style="-fx-background-color: #a9dfbf;" text="Shop" />
+    <Button layoutX="19.0" layoutY="360.0" mnemonicParsing="false" onAction="#goToCart" prefHeight="36.0" prefWidth="82.0" style="-fx-background-color: #0a7999;" text="Shop">
+            <font>
+               <Font size="20.0" />
+            </font></Button>
          </VBox>
      </center>
 
